--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../image/IMG_2812.JPG);
+    background-image: url(../images/IMG_2812.JPG);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
@@ -10,17 +10,59 @@ header {
     display: flex;
     justify-content: end;
     align-items: center;
-    height: 100%;
-    width: 85%;
+    height: 360px;
+    width: 88%;
+    /*position: absolute;*/
 }
 h1 {
     text-align: left;
-    font-size: 4rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    color: azure;
+    font-size: 5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 350px;
+    /*margin-right: 5px;*/
+    left: 150px;
 }
 
 .intro {
     text-align: right;
-    margin-right: 200px;
-    margin-top: 100px;
+    margin-right: 177px;
+    margin-bottom: 50px;
+    margin-top: 70px;
+    font-size: 1rem;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #4d041ec5;
+    text-align: center;
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+.menu ul {
+    list-style: none;
+    color: azure;
+    padding: 0%;
+}
+
+.menu ul li {
+    width: 120px;
+    margin: 15px;
+    padding: 15px;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: azure;
+}
+
+.active, .menu ul li:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
 }
