--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,16 @@ h1 {
     width: 35px;
     height: 35px;
 }
+
+.form {
+    display: flex;
+    background-color: #4d041ec5;
+    border-color: black;
+    height: 100vh;
+    justify-content: end;
+}
+
+.form form {
+    margin-right: 100px;
+    margin-top: 100px;
+}
