--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,10 @@ h1 {
 
 .intro {
     text-align: right;
-    margin-right: 177px;
+    margin-right: 158px;
     margin-bottom: 50px;
     margin-top: 70px;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
 }
 
@@ -55,6 +56,7 @@ h1 {
     width: 120px;
     margin: 15px;
     padding: 15px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .menu ul li a {
@@ -94,4 +96,14 @@ h1 {
 .form form {
     margin-right: 100px;
     margin-top: 100px;
+    height: 400px;
+}
+
+.form form label {
+    color: azure;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.input-class {
+    border-radius: 8px;
 }
