--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,20 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+input {
+    height: 30px;
+}
+
 .input-class {
     border-radius: 8px;
     width: 100%;
+}
+
+.send-class {
+    width: 100%;
+    height: 30px;
+    background-color: #4d041ec5;
+    color: azure;
+    border: none;
+    border-radius: 8px;
 }
