--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ h1 {
     font-size: 5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 350px;
-    /*margin-right: 5px;*/
     left: 150px;
 }
 
@@ -120,4 +119,20 @@ input {
     color: azure;
     border: none;
     border-radius: 8px;
+}
+
+.paragraph {
+    margin-left: 870px;
+    margin-top: -140px;
+    width: 400px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.journey {
+    text-align: left;
+    color: #4d041ec5;
+    font-size: 2rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 350px;
+    margin-left: 50px;
 }
