--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,15 @@ input {
     border-radius: 8px;
 }
 
+.about-page {
+    display: flex;
+    background-color: rgba(240, 255, 255, 0.5);
+    height: 100vh;
+}
+
 .paragraph {
-    margin-left: 870px;
-    margin-top: -140px;
+    margin-left: -600px;
+    margin-top: 250px;
     width: 400px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -135,4 +141,43 @@ input {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 350px;
     margin-left: 50px;
+    width: 100%;
+}
+
+.music {
+    background-color: azure;
+    color: #4d041ec5;
+}
+
+.lists {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-color: black;
+    height: 100vh;
+}
+
+.list-one {
+    margin-top: 300px;
+    margin-left: 50px;
+    position: absolute;
+}
+
+.list-two {
+    margin-top: 400px;
+    margin-left: 800px;
+    position: absolute;
+}
+
+.list-one li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    width: 100%;
+    color: azure;
+}
+
+.list-two li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    width: 100%;
+    color: azure;
 }
