--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,10 @@ input {
     width: 100%;
 }
 
+.input-class:hover {
+    transform: scale(1.05);
+}
+
 .send-class {
     width: 100%;
     height: 30px;
@@ -119,6 +123,18 @@ input {
     color: azure;
     border: none;
     border-radius: 8px;
+}
+
+.send-class:hover {
+    animation-name: background-color;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes background-color {
+    100% {
+        background-color: rgb(0, 0, 0, 0.5);
+    }
 }
 
 .about-page {
