--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header {
 }
 h1 {
     text-align: left;
-    color: azure;
+    color: black;
     font-size: 5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 350px;
@@ -30,6 +30,7 @@ h1 {
     margin-top: 70px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    color: azure;
 }
 
 .menu {
