--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,11 @@ h1 {
 }
 
 .menu ul li a {
+    display: block;
     text-decoration: none;
     color: azure;
+    width: 100%;
+    height: 100%;
 }
 
 .active, .menu ul li:hover {
