--- a/css/style.css
+++ b/css/style.css
@@ -148,9 +148,10 @@ input {
 }
 
 .paragraph {
-    margin-left: -600px;
     margin-top: 250px;
-    width: 400px;
+    margin-right: 20px;
+    width: 71rem;
+    line-height: 25px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -159,8 +160,8 @@ input {
     color: #4d041ec5;
     font-size: 2rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-top: 350px;
-    margin-left: 50px;
+    margin-top: 360px;
+    margin-left: 200px;
     width: 100%;
 }
 
@@ -177,8 +178,8 @@ input {
 }
 
 .list-one {
-    margin-top: 300px;
-    margin-left: 50px;
+    margin-top: 250px;
+    margin-left: 850px;
     position: absolute;
 }
 
@@ -200,4 +201,15 @@ input {
     font-size: 2rem;
     width: 100%;
     color: azure;
+}
+
+.proj-heading {
+    display: flex;
+    margin-left: 50rem;
+    margin-top: 21rem;
+    width: 100%;
+}
+
+.proj-heading h2 {
+    font-size: 2.5rem;
 }
