--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     background-image: url(../images/IMG_2812.JPG);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -212,4 +212,62 @@ input {
 
 .proj-heading h2 {
     font-size: 2.5rem;
+}
+
+@media only screen and (max-width: 600px)  {
+    h1 {
+        text-align: left;
+        color: black;
+        font-size: 30px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-top: 250px;
+        margin-right: 50px;
+    }
+
+    .intro {
+        text-align: left;
+        margin-right: 1px;
+        margin-bottom: 150px;
+        margin-top: 10px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 15px;
+        color: azure;
+        width: 50%;
+        position: fixed;
+        right: 40px;
+    }
+
+    .menu ul li {
+        width: 80px;
+        margin: 15px;
+        padding: 15px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .journey {
+        /*text-align: left;*/
+        color: #4d041ec5;
+        font-size: 20px;
+        /*
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-top: 100px;
+        margin-left: 150px;
+        width: 100%;*/
+    }
+
+    .about-page {
+        /*display: flex;*/
+        background-color: rgba(240, 255, 255, 0.5);
+        height: 100%;
+    }
+
+    .paragraph {
+        margin-top: 250px;
+        margin-right: 10px;
+        width: 71rem;
+        line-height: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 10px;
+    }
+
 }
