--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ h1 {
     top: 0;
 }
 
+.burger {
+    display: none;
+}
+
 .menu ul {
     list-style: none;
     color: azure;
@@ -226,9 +230,8 @@ input {
 
     .intro {
         text-align: left;
-        margin-right: 1px;
-        margin-bottom: 150px;
-        margin-top: 10px;
+        margin-right: 35px;
+        margin-top: 0px;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
         color: azure;
@@ -237,21 +240,36 @@ input {
         right: 40px;
     }
 
+    .menu {
+        display: none;
+    }
+   
     .menu ul li {
-        width: 80px;
+        width: 50px;
         margin: 15px;
         padding: 15px;
         font-family: Arial, Helvetica, sans-serif;
     }
 
     .journey {
-        /*text-align: left;*/
+        text-align: left;
         color: #4d041ec5;
-        font-size: 20px;
-        /*font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
-        margin-top: 30px;
-        margin-left: 150px;
-        /*width: 100%;*/
+        font-size: 22px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-top: 85px;
+        margin-left: 30px;
+        width: 100%;
+        height: 20%;
+    }
+
+    .paragraph {
+        line-height: 18px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        height: 50%;
+        width: 70%;
+        margin-left: -330px;
+        margin-top: 150px;
     }
 
     .about-page {
@@ -260,13 +278,46 @@ input {
         height: 100%;
     }
 
-    .paragraph {
+    .burger {
+        display: block;
+        position: absolute;
+        height: 25px;
+        left: 260px;
+        top: 50px;
+        background-color: transparent;
+    }
+
+    .lists {
+        display: flex;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-color: black;
+        height: 100vh;
+    }
+    
+    .list-one {
         margin-top: 250px;
-        margin-left: 10px;
-        width: 71rem;
-        line-height: 13px;
+        margin-left: 850px;
+        position: absolute;
+    }
+    
+    .list-two {
+        margin-top: 400px;
+        margin-left: 800px;
+        position: absolute;
+    }
+    
+    .list-one li {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 10px;
+        font-size: 2rem;
+        width: 100%;
+        color: azure;
+    }
+    
+    .list-two li {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2rem;
+        width: 100%;
+        color: azure;
     }
 
 }
