--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,18 @@ body {
     overflow: hidden;
 }
 
-header {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    height: 360px;
-    width: 88%;
-    /*position: absolute;*/
-}
 h1 {
-    text-align: left;
+    text-align: right;
     color: black;
     font-size: 5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 350px;
-    left: 150px;
+    margin-right: 150px;
 }
 
 .intro {
     text-align: right;
-    margin-right: 158px;
-    margin-bottom: 50px;
-    margin-top: 70px;
+    margin-right: 150px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     color: azure;
@@ -218,23 +208,39 @@ input {
     font-size: 2.5rem;
 }
 
-@media only screen and (max-width: 600px)  {
+@media only screen and (max-width: 370px)  {
+    body {
+            background-image: url(../images/IMG_2812.JPG);
+        background-position-x: -159px;
+    }
+
     .burger {
         display: block;
         position: absolute;
         height: 25px;
         left: 260px;
-        top: 50px;
+        top: 20px;
         background-color: transparent;
+        z-index: 5;
     }
-    
+
+    #closedMenu {
+        display: block;
+        position: absolute;
+        height: 25px;
+        left: 260px;
+        top: 27px;
+        background-color: transparent;
+        z-index: 5;
+    }
+
     h1 {
         text-align: left;
         color: black;
         font-size: 30px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin-top: 250px;
-        margin-right: 50px;
+        margin-left: 76px;
     }
 
     .intro {
@@ -251,18 +257,23 @@ input {
 
     .menu {
         display: none;
+        width: 100vw;
+    }
+
+    .menu ul {
+        width: 100%;
     }
    
     .menu ul li {
-        width: 50px;
         margin: 15px;
         padding: 15px;
         font-family: Arial, Helvetica, sans-serif;
+        width: 80%;
     }
 
     .journey {
         text-align: left;
-        color: #4d041ec5;
+        color: #4d041e;
         font-size: 22px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin-top: 85px;
@@ -275,10 +286,11 @@ input {
         line-height: 18px;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 12px;
-        height: 50%;
-        width: 70%;
+        height: 100vh;
+        width: 100%;
         margin-left: -330px;
         margin-top: 150px;
+        color: white;
     }
 
     .about-page {
@@ -320,6 +332,36 @@ input {
         margin-left: auto;
         margin-top: 200px;
         width: 100%;
+    }
+
+    .menu {
+        background-color: #4d041e;
+        z-index: 2;
+    }
+
+    .cv-menu {
+        display: none;
+        width: 40%;
+        font-size: 12px;
+    }
+    
+    .menu ul li:hover .cv-menu {
+        display: flex;
+        width: 30%;
+        background-color: rgb(0, 0, 0, 0.5);
+        margin-left: 0;
+    }
+
+    .menu ul li .cv-menu {
+        font-family: Arial, Helvetica, sans-serif;
+        width: 30%;
+        justify-content: center;
+        left: 0;
+        
+    }
+
+    .inner-item {
+        margin: 0 !important;
     }
 
     .form form {
