--- a/css/style.css
+++ b/css/style.css
@@ -245,13 +245,12 @@ input {
 
     .intro {
         text-align: left;
-        margin-right: 35px;
+        margin-left: 76px;
         margin-top: 0px;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
         color: azure;
         width: 50%;
-        position: fixed;
         right: 40px;
     }
 
@@ -277,7 +276,7 @@ input {
         font-size: 22px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin-top: 85px;
-        margin-left: 30px;
+        margin-left: 39px;
         width: 100%;
         height: 20%;
     }
@@ -288,7 +287,7 @@ input {
         font-size: 12px;
         height: 100vh;
         width: 100%;
-        margin-left: -330px;
+        margin-left: -390px;
         margin-top: 150px;
         color: white;
     }
@@ -364,10 +363,24 @@ input {
         margin: 0 !important;
     }
 
+    .form {
+        display: flex;
+        background-color: #4d041ec5;
+        border-color: black;
+        height: 100vh;
+        justify-content: end;
+    }
+
     .form form {
-        margin-left: 20px;
+        margin-left: 15px;
+        margin-right: 20px;
         margin-top: 100px;
+        width: 100vw;
         height: 400px;
+    }
+
+    .send-class {
+        background-color: #4d041e;
     }
 
 }
