--- a/css/style.css
+++ b/css/style.css
@@ -208,9 +208,9 @@ input {
     font-size: 2.5rem;
 }
 
-@media only screen and (max-width: 370px)  {
+@media only screen and (max-width: 375px)  {
     body {
-            background-image: url(../images/IMG_2812.JPG);
+        background-image: url(../images/IMG_2812.JPG);
         background-position-x: -159px;
     }
 
@@ -323,7 +323,7 @@ input {
     .list-two li {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 15px;
-        width: 100%;
+        width: 95%;
         color: azure;
     }
 
@@ -381,6 +381,133 @@ input {
 
     .send-class {
         background-color: #4d041e;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url(../images/IMG_2812.JPG);
+        background-position-x: -159px;
+    }
+    
+    .menu {
+        width: 110px;
+    }
+
+    .menu ul li {
+        width: 60px;
+    }
+
+    h1 {
+        font-size: 3rem;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-top: 282px;
+        margin-left: 121px;
+    }
+    
+    .intro {
+        text-align: left;
+        margin-left: 121px;
+        width: 74%;
+        font-size: 1rem;
+    }
+
+    .journey {
+        text-align: left;
+        color: #4d041e;
+        font-size: 22px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-top: 126px;
+        margin-left: 141px;
+        width: 100%;
+        height: 20%;
+    }
+
+    .paragraph {
+        line-height: 18px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        height: 100vh;
+        width: 100%;
+        margin-left: -390px;
+        margin-top: 196px;
+        color: white;
+    }
+
+    .lists {
+        height: 100%;
+    }
+
+    .list-one {
+        margin-top: 200px;
+        margin-left: 110px;
+        position: absolute;
+    }
+    
+    .list-two {
+        margin-top: 300px;
+        margin-left: 110px;
+        position: absolute;
+    }
+    
+    .list-one li {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        width: 100%;
+        color: azure;
+    }
+    
+    .list-two li {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        width: 95%;
+        color: azure;
+    }
+
+    .proj-heading {
+        margin-left: 115px;
+        margin-top: 200px;
+        width: 67%;
+        color: azure;
+    }
+
+    .form {
+        display: flex;
+        background-color: #4d041ec5;
+        border-color: black;
+        height: 100vh;
+        justify-content: end;
+    }
+
+    .form form {
+        margin-left: 109px;
+        margin-right: 20px;
+        margin-top: 149px;
+        width: 100vw;
+        height: 400px;
+    }
+
+    .send-class {
+        background-color: #4d041e;
+    }
+
+    .cv-menu {
+        display: none;
+        width: 40%;
+        font-size: 12px;
+    }
+
+    .menu ul li .cv-menu {
+        font-family: Arial, Helvetica, sans-serif;
+        width: 55%;
+        justify-content: center;
+        left: 0;
+        
+    }
+
+    .inner-item {
+        margin: 0 !important;
     }
 
 }
