--- a/css/style.css
+++ b/css/style.css
@@ -511,3 +511,80 @@ input {
     }
 
 }
+
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 3rem;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-align: left;
+        margin-top: 282px;
+        margin-left: 192px;
+    }
+    
+    .intro {
+        text-align: left;
+        margin-left: 121px;
+        width: 74%;
+        font-size: 1rem;
+        margin-left: 192px;
+    }
+
+    .journey {
+        text-align: left;
+        color: #4d041e;
+        font-size: 26px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-top: 126px;
+        margin-left: 213px;
+        width: 100%;
+        height: 20%;
+    }
+
+    .paragraph {
+        line-height: 21px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 15px;
+        height: 100vh;
+        width: 100%;
+        margin-left: -390px;
+        margin-top: 178px;
+        color: white;
+    }
+
+    .lists {
+        height: 100%;
+    }
+
+    .list-one {
+        margin-top: 200px;
+        margin-left: 217px;
+        position: absolute;
+    }
+    
+    .list-two {
+        margin-top: 300px;
+        margin-left: 217px;
+        position: absolute;
+    }
+    
+    .list-one li {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        width: 100%;
+        color: azure;
+    }
+    
+    .list-two li {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        width: 95%;
+        color: azure;
+    }
+
+    .proj-heading {
+        margin-left: 185px;
+        margin-top: 200px;
+        width: 67%;
+        color: azure;
+    }
+}
