--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ input {
     font-size: 2.5rem;
 }
 
-@media only screen and (max-width: 375px)  {
+@media only screen and (min-width: 320px) and (max-width: 375px)  {
     body {
         background-image: url(../images/IMG_2812.JPG);
         background-position-x: -159px;
@@ -231,6 +231,7 @@ input {
         left: 260px;
         top: 27px;
         background-color: transparent;
+        overflow-x: hidden;
         z-index: 5;
     }
 
@@ -385,7 +386,7 @@ input {
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 376px) and (max-width: 600px) {
     body {
         background-image: url(../images/IMG_2812.JPG);
         background-position-x: -159px;
@@ -512,7 +513,7 @@ input {
 
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 601px) and (max-width: 768px) {
     h1 {
         font-size: 3rem;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
